<resources>
    <string name="app_name">Educarea</string>
    <string name="app_version">Version</string>
    <string name="sign_up">SIGN UP</string>
    <string name="log_in">LOG IN</string>
    <string name="nickname">Nickname</string>
    <string name="password">Password</string>
    <string name="next">Next</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="try_again">Try again</string>
    <string name="loginRequirement">Login can include only latin letters, numbers and underscore</string>
    <string name="veryBigLogin">Login length is limited to 255 characters</string>
    <string name="veryBigPassword">Password length is limited to 255 characters</string>
    <string name="reconnect_to_network">Reconnect to network</string>
    <string name="connected">Connected</string>
    <string name="userNotExist">User with this name not exist</string>
    <string name="userAlreadyExist">User with this name already exist</string>
    <string name="wrongPassword">Wrong password</string>
    <string name="badLogin">Login does not meet the requirements</string>
    <string name="badPassword">Password does not meet the requirements</string>
    <string name="error">Error</string>
    <string name="moderator">Moderator</string>
    <string name="invitations">Invitations</string>
    <string name="role_student">role: Student</string>
    <string name="role_teacher">role: Teacher</string>
    <string name="group_adding">Group adding</string>
    <string name="groupAlreadyExist">Group with this name already exist</string>
    <string name="create">Create</string>
    <string name="group_name">Group name</string>
    <string name="timetable">Timetable</string>
    <string name="members">Members</string>
    <string name="leave_group">Leave the group</string>
    <string name="you_only_moderator">You can\'t leave the group because you only moderator in there</string>
    <string name="member">Member</string>
    <string name="no_permission">You have not permission on this action</string>
    <string name="surname">Surname</string>
    <string name="name">Name</string>
    <string name="patronymic">Patronymic</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="save">Save</string>
    <string name="done">Done</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="without_teacher">Without teacher</string>
    <string name="object_name">Object name</string>
    <string name="day_of_week">Day of week</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="every_week">Every week</string>
    <string name="odd_week">Odd week</string>
    <string name="even_week">Even week</string>
    <string name="cabinet">Cabinet</string>
    <string name="time">Time</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="subject_list">Subject list</string>
    <string name="cancel_invitation">Cancel invitation</string>
    <string name="untie_user">Untie user</string>
    <string name="bind_user">Bind user</string>
    <string name="user_account">User account</string>
    <string name="delete_group">Delete group</string>
    <string name="enter_your_message">Enter your message</string>
    <string name="copy_to_clip_board">Copy to clip board</string>
    <string name="channel">Channel</string>
    <string name="no_invites">No invites</string>
    <string name="offline_mode">Offline mode</string>
    <string name="update_available">Update Available</string>
    <string name="download">Download</string>
    <string name="later">Later</string>
    <string name="need_update">For further work of the application, you need to install an update</string>
    <string name="update_ask">Download update now?</string>
    <string name="offline_alert">Not available offline</string>
    <string name="enter_invite_code">Enter invite code</string>
    <string name="invite_code">Invite code</string>
    <string name="code_not_exist">Code not exist</string>
    <string name="create_code">Create invite code</string>
    <string name="delete_code">Delete invite code</string>
    <string name="group_channel">Group channel</string>
    <string name="group_channel_description">Notify me of new posts in a group channel</string>
    <string name="app_news">App news</string>
    <string name="app_news_description">Notify me about new app versions and other app news</string>
    <string name="can_not_edit_object">You can edit only yours objects</string>
    <string name="close">Close</string>
    <string name="update_info">Update info</string>
    <string name="enter_the_code_above">Enter the code above</string>
    <string name="wrong_code">Wrong code</string>
    <string name="account">Account</string>
    <string name="logout">Logout</string>
    <string name="close_other_session">Close other session</string>
    <string name="students_chat">Student\'s chat</string>
    <string name="students_chat_channel_description">Notify me of new messages in student\'s chat</string>
    <string name="date">Date</string>
    <string name="events">Events</string>
    <string name="events_calendar">Calendar of events</string>
    <string name="all_events">All events</string>
    <string name="event_name">Event name</string>
    <string name="event_about_text">Event about text</string>
    <string name="event_channel_description">Notify me of new group events</string>
    <string name="new_event">New event added</string>
    <string name="date_and_time">Date and time</string>
    <string name="messages">Messages</string>
    <string name="chose_interlocutor">Chose interlocutor</string>
    <string name="you">You</string>
    <string name="new_message">new message</string>
    <string name="personal_messages">Personal messages</string>
    <string name="personal_message_channel_description">New private message notifications</string>
</resources>
