<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:id="@+id/linearLayoutGroupMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@color/colorPrimary"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context=".GroupMenuActivity">

        <TextView
            android:id="@+id/textViewMenuGroupName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="30dp"
            android:layout_weight="1"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp"
            tools:text="ТулГу 220461-ПБ" />

        <Button
            android:id="@+id/buttonOpenTimeTable"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@color/nearWhite"
            android:onClick="onClickOpenTimetable"
            android:text="@string/timetable"
            android:textColor="@color/colorPrimaryDark" />

        <Button
            android:id="@+id/buttonOpenEvents"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@color/nearWhite"
            android:onClick="onClickOpenEvents"
            android:text="@string/events"
            android:textColor="@color/colorPrimaryDark" />

        <Button
            android:id="@+id/buttonOpenMembers"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@color/nearWhite"
            android:onClick="onClickMembers"
            android:text="@string/members"
            android:textColor="@color/colorPrimaryDark" />

        <Button
            android:id="@+id/buttonOpenChannel"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@color/nearWhite"
            android:onClick="onClickOpenChannel"
            android:text="@string/channel"
            android:textColor="@color/colorPrimaryDark" />

        <Button
            android:id="@+id/buttonOpenStudentChat"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@color/nearWhite"
            android:onClick="onClickOpenStudentChat"
            android:text="@string/students_chat"
            android:textColor="@color/colorPrimaryDark" />

        <Button
            android:id="@+id/buttonDeleteGroup"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@color/nearWhite"
            android:onClick="onClickDeleteGroup"
            android:text="@string/delete_group"
            android:textColor="@color/colorPrimaryDark" />
    </LinearLayout>
</FrameLayout>