<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".AddGroupActivity">

    <TextView
        android:id="@+id/textViewGroupAdding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/group_adding"
        android:textColor="@color/nearBlack"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextNewGroupName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <EditText
        android:id="@+id/editTextNewGroupName"
        android:layout_width="274dp"
        android:layout_height="48dp"
        android:layout_marginBottom="32dp"
        android:background="@color/nearWhite"
        android:ems="10"
        android:hint="@string/group_name"
        android:inputType="textPersonName|textCapSentences"
        android:maxLines="1"
        android:padding="10dp"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="51dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/round_button"
        android:onClick="onClickCreateNewGroup"
        android:text="@string/create"
        android:textColor="@color/nearWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />
</androidx.constraintlayout.widget.ConstraintLayout>