<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-thin"
        android:text="@string/app_name"
        android:textColor="@color/nearWhite"
        android:textSize="70sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/textViewVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Version 0.0.?" />

    <Button
        android:id="@+id/buttonReconnect"
        android:layout_width="177dp"
        android:layout_height="56dp"
        android:layout_marginBottom="32dp"
        android:background="@color/nearWhite"
        android:enabled="false"
        android:onClick="onClickReconnect"
        android:text="@string/try_again"
        android:textColor="@color/colorPrimaryDark"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/buttonEnableOffline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/buttonEnableOffline"
        android:layout_width="177dp"
        android:layout_height="56dp"
        android:layout_marginBottom="32dp"
        android:background="@color/nearWhite"
        android:enabled="false"
        android:onClick="onClickOffline"
        android:text="@string/offline_mode"
        android:textColor="@color/colorPrimaryDark"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/textViewVersion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>